--- a/src/components/Recipe/recipe.scss
+++ b/src/components/Recipe/recipe.scss
@@ -1,5 +1,6 @@
 .Recipe {
   position: relative;
+  width: 73%;
   &__Source {
     margin-top: 4rem;
     font-weight: bold;
@@ -14,13 +15,15 @@
     color: white;
   }
   &__Image {
-    border-radius: 100%;
-    width: 20rem;
-    height: 20rem;
-    position: absolute;
-    top: 0;
-    left: 30%;
-    z-index: 1;
-    object-fit: none;
+    border-radius: 20px;
+    transition: all 0.7s ease;
+    &:hover {
+      transform: scale(1.1) rotate(10deg);
+    }
+  }
+  &__Wrapper {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
   }
 }
